<resources>
	<string name="app_name">M Expense</string>

	<string name="nav_drawer_open">Open sidebar</string>
	<string name="nav_drawer_close">Close sidebar</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>

	<string name="error_blank_name">Name cannot be blank.</string>
	<string name="error_blank_start_date">Starting Date cannot be blank.</string>
	<string name="error_empty_list">Empty list.</string>
	<string name="error_no_info">No Information</string>
	<string name="error_not_found">Not Found</string>

	<string name="label_add_expense">Add Request</string>
	<string name="label_backup">Backup</string>
	<string name="label_backup_firestore">Firestore Backup</string>
	<string name="label_cancel">Cancel</string>
	<string name="label_confirm">Confirm</string>
	<string name="label_confirmation">Confirmation</string>
	<string name="label_content">Content</string>
	<string name="label_date">Date</string>
	<string name="label_name">Name</string>
	<string name="label_owner">Owner</string>
	<string name="label_register">Register</string>
	<string name="label_reset_database">Reset Database</string>
	<string name="label_search">Search</string>
	<string name="label_setting">Setting</string>
	<string name="label_start_date">Starting Date</string>
	<string name="label_tenant">Tenant</string>
	<string name="label_time">Time</string>
	<string name="label_type">Type</string>
	<string name="label_update">Update</string>

	<string name="menu_in_main_about">About</string>
	<string name="menu_in_main_list">List</string>
	<string name="menu_in_main_register">Register</string>

	<string name="notification_backup_fail">Not backup successfully.</string>
	<string name="notification_backup_success">Backup successfully.</string>
	<string name="notification_failed">Failed</string>
	<string name="notification_succeeded">Succeeded</string>
	<string name="notification_delete_confirm">Are you sure to delete this?</string>
	<string name="notification_delete_fail">Not deleted successfully.</string>
	<string name="notification_delete_success">Deleted successfully.</string>
	<string name="notification_resident_not_found">Resident not found!</string>
	<string name="notification_empty_request_list">There is no request.</string>
	<string name="notification_empty_resident_list">There is no resident.</string>
	<string name="notification_reset_database_success">Reset database successfully.</string>
	<string name="notification_update_fail">Not updated successfully.</string>
	<string name="notification_update_success">Updated successfully.</string>
	<string name="about_us_resima">RESIMA</string>
	<string name="about_us_name">Resident Management System</string>

	<string-array name="expense_types">
		<item>meals</item>
		<item>others</item>
		<item>travel</item>
		<item>supplies</item>
		<item>mileage</item>
		<item>repairs</item>
		<item>supplies</item>
		<item>heath care</item>
		<item>refreshments</item>
		<item>transport rental</item>
	</string-array>

	<!-- Preference -->
	<string name="pref_back_up_key">back_up</string>
	<string name="pref_reset_db_key">reset_db</string>
	<string name="pref_theme_mode_key">app_theme</string>

	<string name="error_message_unknown_exception">Something went wrong !!</string>
	<string name="app_config">trip.m.expense.APP_CONFIG</string>
	<string name="app_config_theme_mode">trip.m.expense.APP_CONFIG_THEME_MODE</string>
</resources>
