<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.request.RequestCreateFragment">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<Spinner
			android:id="@+id/spinner_create_type"
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:layout_marginStart="25dp"
			android:layout_marginTop="25dp"
			android:layout_marginEnd="25dp"
			android:contentDescription="@string/label_type"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<LinearLayout
			android:id="@+id/layout_linear_datetime"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:orientation="horizontal"
			app:layout_constraintEnd_toEndOf="@+id/spinner_create_type"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="@+id/spinner_create_type"
			app:layout_constraintTop_toBottomOf="@+id/spinner_create_type">

			<EditText
				android:id="@+id/text_request_date"
				android:layout_width="wrap_content"
				android:layout_height="50dp"
				android:layout_weight="1"
				android:autofillHints=""
				android:ems="10"
				android:hint="@string/label_date"
				android:inputType="date"
				android:textSize="15sp" />

			<EditText
				android:id="@+id/text_request_time"
				android:layout_width="wrap_content"
				android:layout_height="50dp"
				android:layout_weight="1"
				android:autofillHints=""
				android:ems="10"
				android:hint="@string/label_time"
				android:inputType="time"
				android:textSize="15sp" />
		</LinearLayout>

		<EditText
			android:id="@+id/text_request_content"
			android:layout_width="0dp"
			android:layout_height="200dp"
			android:layout_marginTop="15dp"
			android:autofillHints=""
			android:ems="10"
			android:gravity="start|top"
			android:hint="@string/label_content"
			android:inputType="textMultiLine"
			android:textSize="15sp"
			app:layout_constraintEnd_toEndOf="@+id/layout_linear_datetime"
			app:layout_constraintStart_toStartOf="@+id/layout_linear_datetime"
			app:layout_constraintTop_toBottomOf="@+id/layout_linear_datetime" />

		<Button
			android:id="@+id/btn_request_cancel"
			android:layout_width="100dp"
			android:layout_height="50dp"
			android:layout_marginTop="25dp"
			android:text="@string/label_cancel"
			android:textSize="15sp"
			app:layout_constraintStart_toStartOf="@+id/text_request_content"
			app:layout_constraintTop_toBottomOf="@+id/text_request_content" />

		<Button
			android:id="@+id/btn_request_add"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginStart="25dp"
			android:text="@string/label_add_request"
			android:textSize="15sp"
			app:layout_constraintBottom_toBottomOf="@+id/btn_request_cancel"
			app:layout_constraintEnd_toEndOf="@+id/text_request_content"
			app:layout_constraintStart_toEndOf="@+id/btn_request_cancel"
			app:layout_constraintTop_toTopOf="@+id/btn_request_cancel" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
