<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.resident.ResidentRegisterConfirmFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

		<TextView
			android:id="@+id/text_confirm_header"
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:background="@color/green"
			android:padding="15dp"
			android:text="@string/label_confirmation"
			android:textAlignment="center"
			android:textColor="#000000"
			android:textSize="15sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/text_confirm_name_label"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="100dp"
                android:text="@string/label_name"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/text_confirm_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:textColor="@color/black_800"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_confirm_name_label"
                app:layout_constraintTop_toTopOf="@+id/text_confirm_name_label" />

        <TextView
                android:id="@+id/text_confirm_start_date_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/label_start_date"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/text_confirm_name_label"
                app:layout_constraintStart_toStartOf="@+id/text_confirm_name_label"
                app:layout_constraintTop_toBottomOf="@+id/text_confirm_name" />

        <TextView
                android:id="@+id/text_confirm_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black_800"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/text_confirm_name"
                app:layout_constraintStart_toStartOf="@+id/text_confirm_name"
                app:layout_constraintTop_toTopOf="@+id/text_confirm_start_date_label" />

        <TextView
                android:id="@+id/text_confirm_owner_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/label_type"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/text_confirm_start_date_label"
                app:layout_constraintStart_toStartOf="@+id/text_confirm_start_date_label"
                app:layout_constraintTop_toBottomOf="@+id/text_confirm_start_date" />

        <TextView
                android:id="@+id/text_confirm_owner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black_800"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/text_confirm_start_date"
                app:layout_constraintStart_toStartOf="@+id/text_confirm_start_date"
                app:layout_constraintTop_toTopOf="@+id/text_confirm_owner_label" />

		<Button
			android:id="@+id/btn_cancel"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="50dp"
			android:background="@color/green"
			android:text="@string/label_cancel"
			android:textColor="#000000"
			android:textSize="15sp"
			app:layout_constraintEnd_toEndOf="@+id/text_confirm_name_label"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/text_confirm_owner" />

		<Button
			android:id="@+id/btn_confirm"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:background="@color/green"
			android:text="@string/label_confirm"
			android:textColor="#000000"
			android:textSize="15sp"
			app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/btn_cancel"
			app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
