<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/card_bg"
	android:orientation="vertical"
	tools:context="trip.m.expense.ui.trip.TripSearchFragment"
	tools:ignore="HardcodedText,RtlHardcoded">

	<!-- header -->
	<com.google.android.material.textview.MaterialTextView
		android:id="@+id/text_view_search_header"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="Search"
		android:textAlignment="center"
		android:textSize="20sp" />

	<!-- name field -->
	<trip.m.expense.ui.view.TextInputView
		android:id="@+id/text_input_name"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_marginTop="@dimen/margin"
		android:textSize="15sp"
		app:label="Name" />

	<!-- date of trip field -->
	<trip.m.expense.ui.view.TextInputView
		android:id="@+id/text_input_date_of_trip"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_marginTop="@dimen/margin"
		android:inputType="date"
		android:textSize="15sp"
		app:label="@string/label_start_date" />

	<!-- destination field -->
	<trip.m.expense.ui.view.TextInputView
		android:id="@+id/text_input_destination"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_marginTop="@dimen/margin"
		android:textSize="15sp"
		app:label="Destination" />

	<!-- actions -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_marginTop="@dimen/margin"
		android:gravity="end">

		<trip.m.expense.ui.view.ButtonView
			android:id="@+id/btn_search_cancel"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/label_cancel" />

		<trip.m.expense.ui.view.ButtonView
			android:id="@+id/btn_search"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_marginStart="20dp"
			android:text="@string/label_search" />
	</LinearLayout>
</LinearLayout>
