<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.resident.ResidentRegisterFragment"
	tools:ignore="HardcodedText">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="10dp"
		android:background="@drawable/dialog_bg">

		<LinearLayout
			android:id="@+id/layout_linear"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="0dp">

			<!-- Name field -->
			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="70dp"
				android:hint="@string/label_name">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/text_register_name"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:autofillHints=""
					android:background="#0000"
					android:inputType="textPersonName"
					android:paddingStart="0dp"
					android:paddingEnd="0dp"
					android:textSize="14sp" />
			</com.google.android.material.textfield.TextInputLayout>

			<!-- Start Date field -->
			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="70dp"
				android:layout_marginTop="20dp">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/text_register_start_date"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:allowUndo="true"
					android:autofillHints=""
					android:background="#0000"
					android:drawablePadding="0dp"
					android:hint="@string/label_start_date"
					android:inputType="date"
					android:paddingStart="0dp"
					android:paddingEnd="0dp"
					android:textSize="14sp" />
			</com.google.android.material.textfield.TextInputLayout>

			<!-- Owner field -->
			<com.google.android.material.checkbox.MaterialCheckBox
				android:id="@+id/checkbox_register_owner"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:layoutDirection="rtl"
				android:paddingVertical="20dp"
				android:text="@string/label_owner"
				android:textSize="14sp" />

			<ListView
				android:id="@+id/list_errors"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:autofillHints=""
				android:textSize="14sp"
				android:visibility="gone"
				app:flow_wrapMode="aligned" />

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:layout_marginBottom="5dp">

				<com.google.android.material.button.MaterialButton
					android:id="@+id/btn_register_submit"
					android:layout_width="wrap_content"
					android:layout_height="60dp"
					android:layout_marginStart="10dp"
					android:layout_marginEnd="4dp"
					android:text="@string/label_register"
					android:textSize="14sp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<com.google.android.material.button.MaterialButton
					android:id="@+id/btn_register_cancel"
					android:layout_width="wrap_content"
					android:layout_height="60dp"
					android:layout_marginEnd="10dp"
					android:text="Cancel"
					android:textSize="14sp"
					app:layout_constraintBottom_toBottomOf="@+id/btn_register_submit"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="@+id/btn_register_submit" />

			</androidx.constraintlayout.widget.ConstraintLayout>

		</LinearLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
